--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 git .DS_Store
-node_modules
+/Frontend/node_modules/
+/Backend/node_modules/
 /dist
 
 
@@ -20,3 +21,4 @@ yarn-error.log*
 *.njsproj
 *.sln
 *.sw?
+
